<resources>
    <string name="app_name">Help Me Woof</string>
    <string name="item1">Marcar Resuelto</string>
    <string name="item2">Eliminar Reporte</string>
    <string name="txt_titulo1">Clasificacion y Descripcion</string>
    <string name="rbtn1">Perdido</string>
    <string name="rbtn2">Callejero</string>
    <string name="rbtn3">Herido</string>
    <string name="txt_descrip">Describe al lomito o al michi</string>
    <string name="btn1">Abrir Camara</string>
    <string name="btn2">Abrir Galeria</string>
    <string name="btn3">Quitar Imagen</string>
    <string name="btn4p">Crear Reporte</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="iniciarsesionpantalla">Iniciar Sesion</string>
    <string name="registropantalla">Registrarse</string>
    <string name="btn_iniciarsesion">Iniciar Sesion</string>
    <string name="btn_registrarsesesion">Registrarse</string>
    <string name="title_activity_navegacion">NavegacionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_ayuda">Ayuda</string>
    <string name="mapa">Mapa</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="nuevo_reporte">Iniciar sesión</string>
    <string name="iniciar_sesi_n_registrarse">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="por_qu_ya_no_me_aparecen_los_reportes_de_que_se_veian_la_semana_pasada">¿Por qué ya no me aparecen los reportes de que se veian la semana pasada?</string>
    <string name="los_reportes_resueltos_dejan_de_aparecer_despu_s_de_72hrs_de_que_son_marcados_como_resueltos_si_un_reporte_que_viste_antes_no_aparece_lo_m_s_seguro_que_se_haya_resuelto">Los reportes resueltos dejan de aparecer después de 72hrs de que son marcados como resueltos, si un reporte que viste antes no aparece lo más seguro que se haya resuelto :).</string>
    <string name="preguntas_frecuentes">Preguntas Frecuentes</string>
    <string name="puedo_publicar_reportes_sin_crear_una_cuenta">¿Puedo publicar reportes sin crear una cuenta?</string>
    <string name="si_no_tienes_una_cuenta_solo_puedes_ver_los_reportes_que_hacen_los_demas_y_comentar_de_forma_anonima_en_reportes_de_otros_necesitas_crear_una_cuenta_para_poder_generar_reportes">Si no tienes una cuenta solo puedes ver los reportes que hacen los demas y comentar de forma anonima en reportes de otros. Necesitas crear una cuenta para poder generar reportes.</string>
    <string name="solo_se_pueden_hacer_reportes_de_perros">¿Solo se pueden hacer reportes de perros?</string>
    <string name="la_app_est_con_la_intenci_n_de_atender_gatos_y_perros_primordiamente_pero_puedes_reportar_sobre_otros_tipos_de_animales">La app está con la intención de atender gatos y perros primordiamente, pero puedes reportar sobre otros tipos de animales.</string>
    <string name="contacto_guagua420_help_woof">Contacto: guagua420@help.woof</string>
</resources>