<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ayuda.AyudaFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:text="@string/preguntas_frecuentes"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:text="@string/por_qu_ya_no_me_aparecen_los_reportes_de_que_se_veian_la_semana_pasada"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="252dp"
        android:text="@string/puedo_publicar_reportes_sin_crear_una_cuenta"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="374dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="396dp"
        android:text="@string/solo_se_pueden_hacer_reportes_de_perros"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="371dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:text="@string/los_reportes_resueltos_dejan_de_aparecer_despu_s_de_72hrs_de_que_son_marcados_como_resueltos_si_un_reporte_que_viste_antes_no_aparece_lo_m_s_seguro_que_se_haya_resuelto"
        android:textColor="#323232"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="371dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:text="@string/si_no_tienes_una_cuenta_solo_puedes_ver_los_reportes_que_hacen_los_demas_y_comentar_de_forma_anonima_en_reportes_de_otros_necesitas_crear_una_cuenta_para_poder_generar_reportes"
        android:textColor="#323232"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="369dp"
        android:layout_height="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="424dp"
        android:text="@string/la_app_est_con_la_intenci_n_de_atender_gatos_y_perros_primordiamente_pero_puedes_reportar_sobre_otros_tipos_de_animales"
        android:textColor="#323232"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="584dp"
        android:text="@string/contacto_guagua420_help_woof"
        android:textColor="#414141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="373dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="544dp"
        android:text="Si tienes alguna duda o necesitas contactarnos por alguna razón puedes hacer al correo de abajo. :)"
        android:textColor="#414141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>